deploy/deployment.yaml
kind: Namespace
apiVersion: v1
metadata:
  name: karavi
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: proxy-server
  namespace: karavi
  labels:
    app: proxy-server
spec:
  replicas: 1
  selector:
    matchLabels:
      app: proxy-server
  template:
    metadata:
      labels:
        app: proxy-server
    spec:
      containers:
      - name: proxy-server
        image: proxy-server:1.3.0
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8080
        volumeMounts:
        - name: config-volume
          mountPath: /etc/karavi-authorization/config
        - name: storage-volume
          mountPath: /etc/karavi-authorization/storage
        - name: csm-config-params
          mountPath: /etc/karavi-authorization/csm-config-params
      - name: opa
        image: docker.io/openpolicyagent/opa
        imagePullPolicy: IfNotPresent
        args:
        - "run"
        - "--ignore=."
        - "--server"
        - "--log-level=debug"
        ports:
        - name: http
          containerPort: 8181
      - name: kube-mgmt
        image: docker.io/openpolicyagent/kube-mgmt:0.11
        imagePullPolicy: IfNotPresent
        args:
        - "--policies=karavi"
        - "--enable-data"
      volumes:
      - name: config-volume
        secret:
          secretName: karavi-config-secret
      - name: storage-volume
        secret:
          secretName: karavi-storage-secret
      - name: csm-config-params
        configMap:
          name: csm-config-params
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tenant-service
  namespace: karavi
  labels:
    app: tenant-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: tenant-service
  template:
    metadata:
      labels:
        app: tenant-service
    spec:
      containers:
      - name: tenant-service
        image: tenant-service:1.3.0
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 50051
          name: grpc
        volumeMounts:
        - name: config-volume
          mountPath: /etc/karavi-authorization/config
        - name: csm-config-params
          mountPath: /etc/karavi-authorization/csm-config-params
      volumes:
      - name: config-volume
        secret:
          secretName: karavi-config-secret
      - name: csm-config-params
        configMap:
          name: csm-config-params
---
apiVersion: apps/v1 
kind: Deployment
metadata:
  name: redis-primary
  namespace: karavi
  labels:
    app: redis
spec:
  selector:
    matchLabels:
      app: redis
      role: primary
      tier: backend
  replicas: 1
  template:
    metadata:
      labels:
        app: redis
        role: primary
        tier: backend
    spec:
      containers:
      - name: primary
        image: docker.io/redis:6.0.8-alpine
        imagePullPolicy: IfNotPresent
        args: ["--appendonly", "yes", "--appendfsync", "always"]
        resources:
          requests:
            cpu: 100m
            memory: 100Mi
        ports:
        - containerPort: 6379
        volumeMounts:
          - name: redis-primary-volume
            mountPath: /data
      volumes:
        - name: redis-primary-volume
          persistentVolumeClaim:
            claimName: redis-primary-pv-claim
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis-commander
  namespace: karavi
spec:
  replicas: 1
  selector:
    matchLabels:
      app: redis-commander
  template:
    metadata:
      labels:
        app: redis-commander
        tier: backend
    spec:
      containers:
      - name: redis-commander
        image: docker.io/rediscommander/redis-commander:latest
        imagePullPolicy: IfNotPresent
        ports:
        - name: redis-commander
          containerPort: 8081
        livenessProbe:
          httpGet:
            path: /favicon.png
            port: 8081
          initialDelaySeconds: 10
          timeoutSeconds: 5
        resources:
          limits:
            cpu: "500m"
            memory: "512M"
        securityContext:
          runAsNonRoot: true
          readOnlyRootFilesystem: false
          allowPrivilegeEscalation: false
          capabilities:
            drop:
              - ALL
---
apiVersion: v1
kind: Service
metadata:
  name: tenant-service
  namespace: karavi
spec:
  selector:
    app: tenant-service
  ports:
  - port: 50051
    targetPort: 50051
    name: grpc
---
apiVersion: v1
kind: Service
metadata:
  name: proxy-server
  namespace: karavi
spec:
  selector:
    app: proxy-server
  ports:
  - name: http
    protocol: TCP
    port: 8080
    targetPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: redis
  namespace: karavi
spec:
  selector:
    app: redis
  ports:
  - protocol: TCP
    port: 6379
    targetPort: 6379
---
apiVersion: v1
kind: Service
metadata:
  name: redis-commander
  namespace: karavi
spec:
  selector:
    app: redis-commander
  ports:
  - protocol: TCP
    port: 8081
    targetPort: 8081
---
# busybox container is only here to pull in busybox as a dependency
apiVersion: v1
kind: Pod
metadata:
  name: busybox1
  labels:
    app: busybox1
spec:
  containers:
  - name: busybox
    image: docker.io/busybox:latest
