deploy/ingress-nginx.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: powerflex-reverse-proxy
  namespace: default
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          serviceName: powerflex-reverse-proxy
          servicePort: 8080
  - host: "admin.gatekeeper.cluster"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          serviceName: redis-commander
          servicePort: 8081
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: github-auth-provider
  namespace: default
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/grpc-backend: "true"
    nginx.ingress.kubernetes.io/backend-protocol: "GRPC"
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/server-snippet: "grpc_read_timeout 3600s; grpc_send_timeout 3600s;"
spec:
  rules:
  - host: "grpc.gatekeeper.cluster"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          serviceName: github-auth-provider
          servicePort: grpc
