deploy/ingress-traefik.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: proxy-server
  namespace: karavi
  annotations:
    kubernetes.io/ingress.class: "traefik"
    traefik.protocol: h2c
spec:
  rules:
  - http:
      paths:
        - path: /
          pathType: Prefix
          backend:
            serviceName: proxy-server
            servicePort: 8080
  - host: "admin.gatekeeper.cluster"
    http:
      paths:
      - path: /
        backend:
          serviceName: redis-commander
          servicePort: 8081
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: github-auth-provider
  namespace: karavi
  annotations:
    ingress.kubernetes.io/protocol: h2c
    ingress.kubernetes.io/ssl-passthrough: "true"
    kubernetes.io/ingress.class: traefik
    traefik.protocol: h2c
spec:
  rules:
  - host: "grpc.gatekeeper.cluster"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          serviceName: github-auth-provider
          servicePort: grpc
