deploy/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: hello-node-ingress
  namespace: default
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - http:
      paths:
      - path: /hello
        pathType: Prefix
        backend:
          serviceName: hello-node
          servicePort: 8080
      - path: /
        pathType: Prefix
        backend:
          serviceName: powerflex-reverse-proxy
          servicePort: 8080
